solvers/TCS-Meiji/td-validate-master/test/invalid/wrong-order.gr
1 2
p tw 5 4
2 3
3 4
4 5
